[gd_scene load_steps=2 format=2]

[ext_resource path="res://scenes/autoloads/settings.gd" type="Script" id=1]

[node name="Settings" type="CanvasLayer"]
pause_mode = 2
script = ExtResource( 1 )

[node name="PopupPanel" type="PopupPanel" parent="."]
visible = true
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -256.0
margin_top = -150.0
margin_right = 256.0
margin_bottom = 150.0
rect_min_size = Vector2( 512, 300 )
__meta__ = {
"_edit_lock_": true
}

[node name="VBoxContainer" type="VBoxContainer" parent="PopupPanel"]
anchor_right = 1.0
anchor_bottom = 1.0
alignment = 1
__meta__ = {
"_edit_lock_": true
}

[node name="Label" type="Label" parent="PopupPanel/VBoxContainer"]
margin_top = 109.0
margin_right = 512.0
margin_bottom = 123.0
text = "Settings"
align = 1

[node name="HBoxContainer" type="HBoxContainer" parent="PopupPanel/VBoxContainer"]
margin_top = 127.0
margin_right = 512.0
margin_bottom = 151.0

[node name="Label" type="Label" parent="PopupPanel/VBoxContainer/HBoxContainer"]
margin_top = 5.0
margin_right = 66.0
margin_bottom = 19.0
text = "Fullscreen"

[node name="Fullscreen" type="CheckBox" parent="PopupPanel/VBoxContainer/HBoxContainer"]
margin_left = 70.0
margin_right = 94.0
margin_bottom = 24.0

[node name="HBoxContainer2" type="HBoxContainer" parent="PopupPanel/VBoxContainer"]
margin_top = 155.0
margin_right = 512.0
margin_bottom = 171.0

[node name="Label" type="Label" parent="PopupPanel/VBoxContainer/HBoxContainer2"]
margin_top = 1.0
margin_right = 101.0
margin_bottom = 15.0
size_flags_horizontal = 3
text = "Sound"

[node name="Sound" type="HSlider" parent="PopupPanel/VBoxContainer/HBoxContainer2"]
margin_left = 105.0
margin_right = 512.0
margin_bottom = 16.0
size_flags_horizontal = 3
size_flags_stretch_ratio = 4.0
max_value = 1.0
step = 0.01
value = 1.0

[node name="HBoxContainer3" type="HBoxContainer" parent="PopupPanel/VBoxContainer"]
margin_top = 175.0
margin_right = 512.0
margin_bottom = 191.0

[node name="Label" type="Label" parent="PopupPanel/VBoxContainer/HBoxContainer3"]
margin_top = 1.0
margin_right = 101.0
margin_bottom = 15.0
size_flags_horizontal = 3
text = "Music"

[node name="Music" type="HSlider" parent="PopupPanel/VBoxContainer/HBoxContainer3"]
margin_left = 105.0
margin_right = 512.0
margin_bottom = 16.0
size_flags_horizontal = 3
size_flags_stretch_ratio = 4.0
max_value = 1.0
step = 0.01
value = 1.0

[connection signal="popup_hide" from="PopupPanel" to="." method="_on_PopupPanel_popup_hide"]
[connection signal="toggled" from="PopupPanel/VBoxContainer/HBoxContainer/Fullscreen" to="." method="_on_Fullscreen_toggled"]
[connection signal="value_changed" from="PopupPanel/VBoxContainer/HBoxContainer2/Sound" to="." method="_on_Sound_value_changed"]
[connection signal="value_changed" from="PopupPanel/VBoxContainer/HBoxContainer3/Music" to="." method="_on_Music_value_changed"]
